finally aligned center code was bugging idk y

--- a/indexstyle.css
+++ b/indexstyle.css
@@ -5,18 +5,19 @@
 } 
 .nav1{
     font-family: Arial, Helvetica, sans-serif;
-    color: rgb(0, 0, 0);
-    font-size: 25px;
-    padding-right: 40px;
+    color: rgb(255, 255, 255);
+    font-size: 40px;
+    padding-right: 50px;
+    font-weight: 580;
+    text-align: center;
 }
-nav{
-    background-color: rgb(255, 255, 255);
-    align-items: center;
+.navbar{
+    background-color: rgb(109, 109, 109);
     display: flex;
-    justify-content: space-between;
-    width: 100%;
-    padding-top: 20px;
-    padding-left: 20px;
-    padding-right: 20px;
-    padding-bottom: 20px;
+    height: 110px;
+    align-items: center; 
+    justify-content: center;
+}
+.logo{
+    position: absolute;
 }
